
    Checks & Agents:
    * 3988 Windows agent: new global option disabled_sections...
    * 3989 Logwatch patterns: now able to change state of context lines...
    * 4087 netgear_fans, netgear_powersupplies, netgear_temp: new checks for Netgear Switches which support the FASTPATH-BOXSERVICES-PRIVATE MIB
    * 3987 FIX: Check_MK Agent Access: Windows agent reported incorrect only from value
    * 3952 FIX: diskstat: fixed bug if multipath devices having an alias...
    * 3939 FIX: f5_bigip_conns: readded performance data and graphs...
    * 3979 FIX: vbox_guest: Only try to fetch VBox state in case the vboxguest module is loaded
    * 3750 FIX: cmc_temp: Check now also works when using Nagios core
    * 3983 FIX: mssql_instance: Be more robust agains missing instance info in case of connection issues
    * 3963 FIX: check_mk_agent.linux: fixed strayed output of postfix status command
    * 3940 FIX: aix_hacmp_services: fixed broken check in case of agent section showing extra information before the "Status(...)" line...
    * 3941 FIX: zypper: fixed broken check for sections since agent OS SLES12...
    * 4043 FIX: Add missing metric definition for 15 minute CPU load prediction'
    * 3751 FIX: jolokia_metrics: Discovery no longer crashes in case of error querying instance
    * 4088 FIX: ntp: fixed incomplete data handling

    Multisite:
    * 3974 FIX: Sorting comments in hover menu of comments icon by time now
    * 4040 FIX: Fix error in view about "No WATO folder ..." in case of host imported via cmcdump...
    * 4046 FIX: Repaired html rendering....
    * 3938 FIX: tactical overview: fixed wrong display of number of host/service problems...
    * 3980 FIX: Fixed possible flickering GUI when using Chrome and zooming the page
    * 3981 FIX: Views: Fixed context button displaying depending on usage

    WATO:
    * 3984 Permissions can now be filtered by providing a search term on the "edit role" page...