@@ -1,0 +1,9 @@
+Title: oracle_tablespaces: file online states are now configurable if size info is available
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.4.0i3
+Date: 1479890179
+Class: feature
+
+
