@@ -6,6 +6,7 @@
     * 3988 Windows agent: new global option disabled_sections...
     * 3989 Logwatch patterns: now able to change state of context lines...
     * 4087 netgear_fans, netgear_powersupplies, netgear_temp: new checks for Netgear Switches which support the FASTPATH-BOXSERVICES-PRIVATE MIB
+    * 4089 oracle_tablespaces: file online states are now configurable if size info is available
     * 3987 FIX: Check_MK Agent Access: Windows agent reported incorrect only from value
     * 3952 FIX: diskstat: fixed bug if multipath devices having an alias...
     * 3939 FIX: f5_bigip_conns: readded performance data and graphs...
